[package]
name = "unctool"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A library to convert between Linux and Windows UNC paths. Converts local Linux path to Windows/Linux UNC and vice versa."
repository = "https://github.com/poul1x/unctool"

[dependencies]
shellexpand = "3.1.1"